# pdfhunter

./: .env.example  .gitignore  AGENT_FLOW.md  CLAUDE.md  DECISION_POLICY.md  FULLTEXT_OCR_POLICY.md  OCR_STRATEGY.md  README.md  README_new.md  REPOSITORY_POLICY.md  VERIFICATION_POLICY.md  WORKFLOW.md  pyproject.toml  run_ui.py
devlog/: 20250124_001_project_initialization.md  20250124_002_core_modules_implementation.md  20250124_003_cli_extract_implementation.md  20250124_003_pipeline_and_ui_implementation.md  20250124_P01_implementation_plan.md  20260125_005_llm_vision_extraction.md  20260131_006_project_rename_and_specs.md  20260131_007_zoterosync_module.md
specs/: acceptance.md  constraints.md  goals.md  non-goals.md  problem.md
src/pdfhunter/: __init__.py  cli.py
src/pdfhunter/core/: __init__.py  config.py  document.py  merger.py  pipeline.py
src/pdfhunter/export/: __init__.py  bibtex.py  csl_json.py  ris.py  zotero_json.py
src/pdfhunter/extraction/: __init__.py  ocr_extractor.py  page_selector.py  preprocessor.py  text_extractor.py
src/pdfhunter/models/: __init__.py  bibliography.py  evidence.py
src/pdfhunter/parsing/: __init__.py  llm_extractor.py  rule_based.py
src/pdfresolve/: __init__.py  cli.py
src/zoterosync/: __init__.py  cli.py  client.py  config.py  db.py  export.py  sync.py
tests/: __init__.py  test_enrichment.py  test_expansion.py  test_export.py  test_merger.py  test_models.py  test_ocr_extractor.py  test_parsing.py  test_pipeline.py  test_text_extractor.py  test_ui.py  test_validation.py  test_zoterosync.py
(+30 files in other folders)
